# agentea

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  test_planner_executor.py  test_script.sh
app/: main.py
app/agents/: base.py  registry.py  types.py
app/agents/calculator/: __init__.py  calculator_agent.py
app/agents/data_processing_example/: data_processing_agent.py
app/agents/executor/: __init__.py  executor_agent.py
app/agents/planner/: __init__.py  planner_agent.py
app/clients/: ollama_client.py
app/config/: postgres_config.py
app/routers/: __init__.py
app/routers/agents/: __init__.py  agents.py  planner_executor.py  types.py
app/routers/debug/: __init__.py  debug.py
app/routers/healthz/: __init__.py  healthz.py
app/utils/db/: postgres.py
migrations/versions/: 0001_initial.sql
